test_regress/t/t_enum_type_methods_bad.out
%Error: Internal Error: t/t_enum_type_methods_bad.v:24:14: ../V3Width.cpp:#: Unsupported: enum next/prev with non-const argument
                                                         : ... In instance t
      e.next(increment);
             ^~~~~~~~~
                        ... See the manual and https://verilator.org for more assistance.
